negrito e itálico semântico e não semântico

--- a/HTML5_CSS3/modulo 1/Exercicios/ex008/index.HTML
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex008/index.HTML
@@ -20,7 +20,7 @@
         Nesta frase, temos um <i>termo em itálico</i> usando a tag I (tag não semântica).
     </p>
     <p>
-        Aqui temos um <em>termo em Ênfase</em> usando a tag EM (semântico)
+        Aqui temos um <em>termo em Ênfase</em> usando a tag EM (semântico).
     </p>
 </body>
 </html>
