Trabalhando com links

--- a/HTML5_CSS3/modulo 1/Exercicios/ex010/index.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex010/index.html
@@ -15,6 +15,6 @@
     <h2>Usando links internos</h2>
     <p>Está é a primeira página do site. Se você quiser, pode acessar também a minha <a href="pag002.html" target="_self" rel="next">segunda página.</a></p>
 
-    <p>Você também pode visitar a nossa página de <a href="noticias/pag003.html" target="_self">notícias</a></p>
+    <p>Você também pode visitar a nossa página de <a href="noticias/pag003.html" target="_self">notícias.</a></p>
 </body>
 </html>
