--- a/HTML5_CSS3/modulo 1/Exercicios/ex010/noticias/pag003.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex010/noticias/pag003.html
@@ -10,8 +10,8 @@
     <h1>Está é a terceira página</h1>
     <p>Está é a página de notícias</p>
 
-    <p>Voltar a <a href="../index.html">primeira página</a></p>
+    <p>Voltar a <a href="../index.html">primeira página.</a></p>
 
-    <p>ir para <a href="../pag002.html">segunda página</a></p>
+    <p>ir para <a href="../pag002.html">segunda página.</a></p>
 </body>
 </html>
