--- a/HTML5_CSS3/modulo 1/Exercicios/ex010/pag002.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex010/pag002.html
@@ -12,7 +12,7 @@
 
     <p>Está pagina é um oferecimento de <a href="https://github.com/victorhenriq?tab=repositories" target="_blank" rel="nofollow">Victor Cardoso</a></p>
     
-    <p><a href="index.html" rel="previous">Voltar para a primeira página</a></p>
+    <p><a href="index.html" rel="previous">Voltar para a primeira página.</a></p>
 
     <p>ir para a <a href="noticias/pag003.html">terceira página.</a></p>
 </body>
