--- a/HTML5_CSS3/modulo 1/Exercicios/ex010/index.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex010/index.html
@@ -12,9 +12,15 @@
 
     <p>Você também pode acessar o "meu" <a href="https://github.com/victorhenriq?tab=repositories" target="_blank" rel="external"> site gratuito</a></p>
 
-    <h2>Usando links internos</h2>
+    <h1>Usando links internos</h1>
     <p>Está é a primeira página do site. Se você quiser, pode acessar também a minha <a href="pag002.html" target="_self" rel="next">segunda página.</a></p>
 
     <p>Você também pode visitar a nossa página de <a href="noticias/pag003.html" target="_self">notícias.</a></p>
+
+    <h1>Links para downloads</h1>
+    <ul>
+        <li><a href="livro/02 - Como funciona a Internet.pdf" download="02 - Como funciona a Internet.pdf" type="application/pdf">Baixar o livro em PDF</a></li>
+        <li><a href="livro/02 - Como funciona a Internet.zip" download="02 - Como funciona a Internet.pdf " type="application/zip">Livro compactado em zip</a></li>
+    </ul>
 </body>
 </html>
