Desafio das Mensagens

--- a/HTML5_CSS3/modulo 1/desafios/001/index.html
+++ b/HTML5_CSS3/modulo 1/desafios/001/index.html
@@ -7,7 +7,7 @@
     <title>Desafio das mensagens</title>
 </head>
 <body>
-    <h1>Desafio das mensagens</h1>
+    <h1>Desafio das Mensagens</h1>
     <br>
     <p>* Um</p>
     <p>** Dois</p>
