Desafio das tags

--- a/HTML5_CSS3/modulo 1/desafios/008/verde.html
+++ b/HTML5_CSS3/modulo 1/desafios/008/verde.html
@@ -8,6 +8,7 @@
     <style>
         body{
             background-color: rgb(0, 255, 0);
+            color: rgb(0, 97, 0);
         }
     </style>
 </head>
