--- a/HTML5_CSS3/modulo 1/desafios/008/amarela.html
+++ b/HTML5_CSS3/modulo 1/desafios/008/amarela.html
@@ -7,7 +7,8 @@
     <title>Navegação</title>
     <style>
         body {
-            background-color: yellow;
+            background-color: rgb(251, 255, 0);
+            color: rgb(128, 120, 1);
         }
     </style>
 </head>
