--- a/HTML5_CSS3/modulo 1/desafios/008/amarela.html
+++ b/HTML5_CSS3/modulo 1/desafios/008/amarela.html
@@ -18,7 +18,7 @@
     <p>Você agora está na área amarela. Você acessou clicando no segundo link da página princpal.</p>
 
     <ul>
-        <li><a href="index.html" target="_self" rel="internal">Voltar para página principal</a></li>
+        <li><a href="index.html" target="_self" rel="internal">Voltar para página cinza (principal)</a></li>
     </ul>
 </body>
 </html>
