--- a/HTML5_CSS3/modulo 1/Exercicios/ex011/index.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex011/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Imagem dinâmica</h1>
-    <p>Tente abrir esse site em vários dispositivos diferentes ou simplesmente aumente e diminua o tamanho do seu navegador</p>
+    <p>Tente abrir esse site em vários dispositivos diferentes ou simplesmente aumente e diminua o tamanho do seu navegador.</p>
 
     <picture>
         
