Usando imagens dinamicas e áudio

--- a/HTML5_CSS3/modulo 1/Exercicios/ex011/index.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex011/index.html
@@ -16,5 +16,18 @@
         <source media="(max-width: 1050px)" srcset="imagens/foto-m.png" type="image/png">
         <img src="imagens/foto-g.png" alt="Imagem flexível">
     </picture>
+
+    <h1>Reproduzindo áudio</h1>
+    <p>Vamos aprender a reproduzir áudios em HTML5.</p>
+    <!--<audio src="midia/Enough-neffex.mp3" controls autoplay></audio>-->
+    <!--Formatos de áudio: MP3, WAV e OGG-->
+
+    <audio preload="metadata" autoplay controls loop>
+        <source src="midia/Enough-neffex.mp3" type="audio/mpeg">
+        <source src="midia/Enough-neffex.mp3" type="audio/ogg">
+        <source src="midia/Enough-neffex.mp3" type="audio/wav">
+        <p>Infelizmente seu navegador não consegue reproduuzir áudio. <a href="midia/Enough-neffex.mp3">Clique aqui para baixar o arquivo MP3</a></p>
+    </audio>
+    
 </body>
 </html>
