Adicionando video no site

--- a/HTML5_CSS3/modulo 1/Exercicios/ex011/index.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex011/index.html
@@ -28,6 +28,8 @@
         <source src="midia/Enough-neffex.mp3" type="audio/wav">
         <p>Infelizmente seu navegador não consegue reproduuzir áudio. <a href="midia/Enough-neffex.mp3">Clique aqui para baixar o arquivo MP3</a></p>
     </audio>
+
+    <!--Formatos de vídeo: .MP$, .M4V, WEBM e OGV-->
     
 </body>
 </html>
