--- a/HTML5_CSS3/modulo 1/Exercicios/ex012/index.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex012/index.html
@@ -12,12 +12,18 @@
 
     <!--<video src="midia/Car.mp4" width="500" controls></video> (Esse é o modo mais simples)-->
 
-    <video width="500" poster="imagens/capa.jpg" controls>
+    <video width="560" height="315" poster="imagens/capa.jpg" controls loop>
         <source src="midia/Car.m4v" type="video/mp4">
         <source src="midia/Car.webm" type="video/webm">
         <source src="midia/Car.mp4" type="video/mp4">
         <source src="midia/Car.ogv" type="video/ogg">
         <p>Seu navegador não suporta reprodução de vídeo.</p>
     </video>
+
+    <h1>Inserindo vídeos do youtube</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/MvtOfnJqZyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <h1>Inserindo vídeo cmo vimeo</h1>
+    <iframe src="https://player.vimeo.com/video/378616465?h=e2117d6e25&autoplay=1&loop=1&color=000000&title=0&byline=0&portrait=0" width="560" height="315" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
