--- a/HTML5_CSS3/modulo 1/desafios/007/index.html
+++ b/HTML5_CSS3/modulo 1/desafios/007/index.html
@@ -11,8 +11,8 @@
     <p>Você está vendo a imagem completa? Experimente ampliar o tamanho sua janela para aproveitar a melhor experiência</p>
 
     <picture>
-        <source media="(min-width: 10px)" srcset="imagens/paisagem-p.png" type="image/png">
-        <source media="(max-width: 300px)" srcset="imagens/paisagem-m.png" type="image/png">
+        <source media="(max-width: 750px)" srcset="imagens/paisagem-p.png" type="image/png">
+        <source media="(max-width: 1208px)" srcset="imagens/paisagem-m.png" type="image/png">
         <img src="imagens/paisagem-g.png" alt="Imagem Flexível">       
     </picture>
 </body>
