--- a/HTML5_CSS3/modulo 2/exercicios/ex022/hover.html
+++ b/HTML5_CSS3/modulo 2/exercicios/ex022/hover.html
@@ -9,6 +9,8 @@
         body {
             background-color: yellow;
         }
+
+        /* p é filho de div devido o uso de >*/
         div > p {
             background-color: red;
             color: white;
