Modelo de caixas

--- a/HTML5_CSS3/modulo 2/exercicios/ex023/caixa01.html
+++ b/HTML5_CSS3/modulo 2/exercicios/ex023/caixa01.html
@@ -6,19 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de caixas</title>
     <style>
-        h1 {
+        h1 { /* box-level */
             background-color: lightgray;
             height: 300px;
             width: 300px;
-            border-width: 10px;
+            /*border-width: 10px;
             border-style: solid;
-            border-color: black ;
+            border-color: black ;*/
+            border: solid 10px black;
             padding: 10px;
+            /*outline-width: 5px;
+            outline-style: dashed;
+            outline-color: red;*/
+            outline: dashed 5px red;
         }
 
-        a {
+        a { /* inline-level */
             border: grsolidoove 10px red;
-            margin: 10px;
+            margin: 20px 20px 40px 20px;
+            padding: 5px;
         }
     </style>
 </head>
