--- a/HTML5_CSS3/modulo 2/exercicios/ex023/caixa02.html
+++ b/HTML5_CSS3/modulo 2/exercicios/ex023/caixa02.html
@@ -28,6 +28,7 @@
             color: white;
             font-weight: bold;
             margin-right: 15px;
+            box-shadow: 1px 1px 1px black;
         }
 
         nav > a:hover {
