--- a/HTML5_CSS3/modulo 2/exercicios/ex017/cor01.html
+++ b/HTML5_CSS3/modulo 2/exercicios/ex017/cor01.html
@@ -21,6 +21,6 @@
     <h1>Testando gradiente</h1>
     <p>Nessa página tenho um exemplo de cor pra background que talvez eu use pra fazer um site de tecnologia</p>
     
-    <p>para visitar a segunda página <a href="pag02.html">clique aqui</a></p>
+    <p>para visitar a segunda página <a href="pag02.html" target="_self" rel="next">clique aqui</a></p>
 </body>
 </html>
