--- a/HTML5_CSS3/modulo 2/exercicios/ex017/pag02.html
+++ b/HTML5_CSS3/modulo 2/exercicios/ex017/pag02.html
@@ -21,6 +21,6 @@
     <h1>Testando gradiente</h1>
     <p>Nessa página eu tentei colocar um gradiente próximo a paleta de cores do logo do instagram.</p>
 
-    <p>Pra voltar ao início <a href="cor01.html" target="_self" rel="internal">Clique aqui</a></p>
+    <p>Pra voltar ao início <a href="cor01.html" target="_self" rel="prev">Clique aqui</a></p>
 </body>
 </html>
