--- a/HTML5_CSS3/modulo 2/exercicios/ex022/links.html
+++ b/HTML5_CSS3/modulo 2/exercicios/ex022/links.html
@@ -61,8 +61,8 @@
 <body>
     <h1>Personalizando links</h1>
     <ul>
-        <li><a href="https://github.com/victorcardosodev" target="_blank" class="special">Repoositório GitHub </a></li>
-        <li><a href="https://www.linkedin.com/in/victor-cardoso-programmer/" class="special">LinkedIn </a></li>
+        <li><a href="https://github.com/victorcardosodev" target="_blank" rel="external" class="special">Repoositório GitHub </a></li>
+        <li><a href="https://www.linkedin.com/in/victor-cardoso-programmer/" rel="external" class="special">LinkedIn </a></li>
         <li><a href="#">Site do portfolio </a></li>
     </ul>
 </body>
