--- a/HTML5_CSS3/modulo 1/Exercicios/ex015/index.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex015/index.html
@@ -18,6 +18,6 @@
     <h2>Capitulo 2.1</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quae itaque dignissimos, quidem in nemo nisi asperiores voluptate dicta ea expedita repellendus fugiat cumque atque veniam nam a tempore vel.</p>
 
-    <p><a href="pagina02.html" target="_self" rel="internal">Ir para página 2</a></p>
+    <p><a href="pagina02.html" target="_self" rel="next">Ir para página 2</a></p>
 </body>
 </html>
