--- a/HTML5_CSS3/modulo 1/Exercicios/ex015/pagina02.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex015/pagina02.html
@@ -12,6 +12,6 @@
     <h2>Teste de estilos</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus fugit a praesentium odio voluptatem deleniti tempore voluptatum cupiditate, aut dolorem facilis dolores ipsam eos harum eveniet maxime sint! Corporis, vitae?</p>
 
-    <p><a href="index.html" target="_self" rel="internal">Voltar</a></p>
+    <p><a href="index.html" target="_self" rel="prev">Voltar</a></p>
 </body>
 </html>
