--- a/HTML5_CSS3/modulo 1/Exercicios/ex015/pagina02.html
+++ b/HTML5_CSS3/modulo 1/Exercicios/ex015/pagina02.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Segunda página</title>
-</head>
-<body>
-    <h1>Segunda página</h1>
-    <h2>Teste de estilos</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus fugit a praesentium odio voluptatem deleniti tempore voluptatum cupiditate, aut dolorem facilis dolores ipsam eos harum eveniet maxime sint! Corporis, vitae?</p>
+<html lang="PT-BR">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Segunda página</title>
+    </head>
+    <body>
+        <h1>Segunda página</h1>
+        <h2>Teste de estilos</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus fugit a praesentium odio voluptatem deleniti tempore voluptatum cupiditate, aut dolorem facilis dolores ipsam eos harum eveniet maxime sint! Corporis, vitae?</p>
 
-    <p><a href="index.html" target="_self" rel="prev">Voltar</a></p>
-</body>
+        <p><a href="index.html" target="_self" rel="prev">Voltar</a></p>
+    </body>
 </html>
