--- a/HTML5_CSS3/modulo 2/desafios/010/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/010/index.html
@@ -29,34 +29,39 @@
         <h2>A primeira versão</h2>
         <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
-        <picture>
-            <source media="(min-width: )" srcset="imagens/dan-droid-pq.png" type="image/png">
-            <img src="imagens/dan-droids.png" alt="">
-        </picture>
+        <div class="picture">
+            <picture class="fotos">
+                <source media="(max-width: 800px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+                <img src="imagens/dan-droids.png" alt="">
+            </picture>
+        </div>
 
         <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
 
         <h2>Surge um novo mascote</h2>
         <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
-        <picture>
-            <source media="(min-width: )" srcset="imagens/irina-blok-pq.jpg" type="image/jpeg">
-            <img src="imagens/irina-blok.jpg" alt="">
-        </picture>
+        <div class="picture">
+            <picture>
+                <source media="(max-width: 800px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpeg">
+                <img src="imagens/irina-blok.jpg" alt="">
+            </picture>
+        </div>
 
         <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
 
-        <picture>
-            <source media="(min-width: )" srcset="">
-            <img src="imagens/bugdroid.png" alt="">
-        </picture>
+        <div class="picture">
+            <picture>
+                <source media="(min-width: )" srcset="">
+                <img src="imagens/bugdroid.png" alt="">
+            </picture>
+        </div>
 
         <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <div id="video">
+            <iframe width="720" height="500" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
 
         <div>
             <h2>Quer aprender mais?</h2>
