--- a/HTML5_CSS3/modulo 2/desafios/010/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/010/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>Curiosidades de Tecnologia</h1>
-        <h2>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</h2>
+        <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.</p>
         <menu>
             <a href="index.html" target="_self" rel="">Home</a>
             <a href="noticias.html" target="_self" rel="">Notícias</a>
@@ -24,10 +24,15 @@
 
     <main>
         <h2>História do Mascote do Android</h2>
-        <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
+        <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para
+            dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma
+            história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
 
-        <h2>A primeira versão</h2>
-        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+        <h3 class="subtitulos">A primeira versão</h3>
+        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele
+            conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô.
+            O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da
+            empresa para a criação de um mascote.</p>
 
         <div class="picture">
             <picture class="fotos">
@@ -38,8 +43,10 @@
 
         <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
 
-        <h2>Surge um novo mascote</h2>
-        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+        <h3 class="subtitulos">Surge um novo mascote</h3>
+        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A
+            ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô
+            de uma maneira mais agradável.</p>
 
         <div class="picture">
             <picture>
@@ -48,7 +55,9 @@
             </picture>
         </div>
 
-        <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
+        <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O
+            desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote
+            do Android.</p>
 
         <div class="picture">
             <picture>
@@ -57,15 +66,22 @@
             </picture>
         </div>
 
-        <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
+        <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de
+            banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no
+            escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo,
+            objetivo.</p>
 
         <div id="video">
-            <iframe width="720" height="500" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="720" height="500" src="https://www.youtube.com/embed/l2UDgpLz20M"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
 
-        <div>
-            <h2>Quer aprender mais?</h2>
-            <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
+        
+        <div id="versoesandroid">
+            <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce,
+                em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
 
             <ul>
                 <li>1.5 - Cupcake</li>
@@ -86,16 +102,19 @@
                 <li>9.0 - Pie</li>
             </ul>
 
-            <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
+            <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou
+                a usar numerações, o que deu origem ao Android 10.</p>
 
-            <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+            <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma
+                trouxe para o sistema Android.</p>
         </div>
 
-        <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
+        <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e
+            seu simpático mascote.</p>
     </main>
 
     <footer>
-        <p>Site criado por Gustavo Guanabara para o CursoemVideo.</p>
+        <p><em>Site criado por <strong>Gustavo Guanabara</strong> para o <strong>CursoemVideo</strong></em></p>
     </footer>
 </body>
 
