Curiosidades de tecnologia

--- a/HTML5_CSS3/modulo 2/desafios/010/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/010/index.html
@@ -114,7 +114,7 @@
     </main>
 
     <footer>
-        <p><em>Site criado por <strong>Gustavo Guanabara</strong> para o <strong>CursoemVideo</strong></em></p>
+        <p><em>Site criado por <strong>Victor Cardoso</strong> para o <strong>CursoemVideo</strong></em></p>
     </footer>
 </body>
 
