Curiosidades de tecnologia

--- a/HTML5_CSS3/modulo 2/desafios/010/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/010/index.html
@@ -52,8 +52,7 @@
                     <img src="imagens/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid">
                 </picture>
             </div>
-            <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O
-                desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote
+            <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote
                 do Android.</p>
             
             <div class="picture">
