--- a/HTML5_CSS3/modulo 2/desafios/010/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/010/index.html
@@ -14,11 +14,11 @@
     <header>
         <h1>Curiosidades de Tecnologia</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.</p>
-        <menu>
+        <nav>
             <a href="#" target="_self" rel="">Home</a>
             <a href="#" target="_self" rel="">Notícias</a>
             <a href="#" target="_self" rel="">Curiosidades</a>
-        </menu>
+        </nav>
     </header>
 
     <main>
