Teste de imagem de fundo

--- a/HTML5_CSS3/modulo 2/desafios/012/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/012/index.html
@@ -10,64 +10,65 @@
 </head>
 
 <body>
-    <header>
-        <h1>Cordel Moderno</h1>
-        <p>Por <strong>Milton Duarte</strong></p>
-    </header>
-
     <main>
+        
+        <header>
+            <h1>Cordel Moderno</h1>
+            <p>Por <strong>Milton Duarte</strong></p>
+        </header>
+
         <div>
             <p>
-                <pre>
-                    Estou ficando cansado
-                    Da tal tecnologia
-                    Só se fala por e-mail
-                    Mensagem curta e fria
-                    Twitter e Facebook
-                    Antes que eu caduque
-                    Vou dizer tudo em poesia.
-                </pre>
+                <pre>                
+                        Estou ficando cansado
+                        Da tal tecnologia
+                        Só se fala por e-mail
+                        Mensagem curta e fria
+                        Twitter e Facebook
+                        Antes que eu caduque
+                        Vou dizer tudo     
+                </pre>                       
             </p>
         </div>
 
         <div id="flor">
-            <pre>
-                <p>
-                    Não é mais como era antes
-                    É tudo abreviado
-                    "Você" só tem duas letras
-                    O "O" e o "E" foi riscado
-                    Para declarar o amor
-                    Basta botar uma flor
-                    E um coração desenhado.
-                </p>
-            </pre>
+            <p>
+                <pre>
+                        Não é mais como era antes
+                        É tudo abreviado
+                        "Você" só tem duas letras
+                        O "O" e o "E" foi riscado
+                        Para declarar o amor
+                        Basta botar uma flor
+                        E um coração desenhado.
+                </pre>
+            </p>
         </div>
 
         <div>
-            <pre>
-                <p>
-                    Arroba agora não pesa
-                    É parte de um endereço
-                    Ponto final nem se usa
-                    Ou vai até no começo
-                    Agora é .com
-                    Se o saite é muito bom
-                    Ele vale um alto preço.
-                </p>
-            </pre>
+            <p>
+                <pre>
+                        Arroba agora não pesa
+                        É parte de um endereço
+                        Ponto final nem se usa
+                        Ou vai até no começo
+                        Agora é .com
+                        Se o saite é muito bom
+                        Ele vale um alto preço.
+                </pre>
+            </p>
 
-            <pre>
-                <p>
-                    Pra piorar a liguagem
-                    O emoticom é um risco
-                    Tem símbolo para tudo
-                    Ponto e vírgula e um asterisco
-                    Um beijo significa
-                    Pra entender como fica
-                    Decifre esse rabisco.
-                </p>
-            </pre>
+            <p>
+                <pre>
+                        Pra piorar a liguagem
+                        O emoticom é um risco
+                        Tem símbolo para tudo
+                        Ponto e vírgula e um asterisco
+                        Um beijo significa
+                        Pra entender como fica
+                        Decifre esse rabisco.
+                </pre>
+            </p>
         </div>
 
         <div>
