--- a/HTML5_CSS3/modulo 2/desafios/012/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/012/index.html
@@ -11,64 +11,51 @@
 
 <body>
     <main>
-        
+
         <header>
             <h1>Cordel Moderno</h1>
             <p>Por <strong>Milton Duarte</strong></p>
         </header>
 
         <div>
-            <p>
-                <pre>                
-                        Estou ficando cansado
-                        Da tal tecnologia
-                        Só se fala por e-mail
-                        Mensagem curta e fria
-                        Twitter e Facebook
-                        Antes que eu caduque
-                        Vou dizer tudo     
-                </pre>                       
-            </p>
+            <p>Estou ficando cansado</p>
+            <p>Da tal tecnologia</p>
+            <p>Só se fala por e-mail</p>
+            <p>Mensagem curta e fria</p>
+            <p>Twitter e Facebook</p>
+            <p>Antes que eu caduque</p>
+            <p>Vou dizer tudo</p>
         </div>
 
         <div id="flor">
-            <p>
-                <pre>
-                        Não é mais como era antes
-                        É tudo abreviado
-                        "Você" só tem duas letras
-                        O "O" e o "E" foi riscado
-                        Para declarar o amor
-                        Basta botar uma flor
-                        E um coração desenhado.
-                </pre>
-            </p>
+            <p>Não é mais como era antes</p>
+            <p>É tudo abreviado</p>
+            <p>"Você" só tem duas letras</p>
+            <p>O "O" e o "E" foi riscado</p>
+            <p>Para declarar o amor</p>
+            <p>Basta botar uma flor</p>
+            <p>E um coração desenhado.</p>
+
+
         </div>
 
         <div>
-            <p>
-                <pre>
-                        Arroba agora não pesa
-                        É parte de um endereço
-                        Ponto final nem se usa
-                        Ou vai até no começo
-                        Agora é .com
-                        Se o saite é muito bom
-                        Ele vale um alto preço.
-                </pre>
-            </p>
+            <p>Arroba agora não pesa</p>
+            <p>É parte de um endereço</p>
+            <p>Ponto final nem se usa</p>
+            <p>Ou vai até no começo</p>
+            <p>Agora é .com</p>
+            <p>Se o saite é muito bom</p>
+            <p>Ele vale um alto preço.</p>
 
-            <p>
-                <pre>
-                        Pra piorar a liguagem
-                        O emoticom é um risco
-                        Tem símbolo para tudo
-                        Ponto e vírgula e um asterisco
-                        Um beijo significa
-                        Pra entender como fica
-                        Decifre esse rabisco.
-                </pre>
-            </p>
+            <br><br>
+            <p>Pra piorar a liguagem</p>
+            <p>O emoticom é um risco</p>
+            <p>Tem símbolo para tudo</p>
+            <p>Ponto e vírgula e um asterisco</p>
+            <p>Um beijo significa</p>
+            <p>Pra entender como fica</p>
+            <p>Decifre esse rabisco.</p>
         </div>
 
         <div>
