--- a/HTML5_CSS3/modulo 2/desafios/012/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/012/index.html
@@ -58,10 +58,37 @@
             <p>Decifre esse rabisco.</p>
         </div>
 
-        <div>
+        <div id="livro">
+            <p>Tenho saudade das cartas</p>
+            <p>Escritas com a própria mão</p>
+            <p>mandava no mês de Junho</p>
+            <p>Só chegava no  verão</p>
+            <p>Mas matava a saudade</p>
+            <p>Era texto de verdade</p>
+            <p>Nas linhas do coração.</p>
+        </div>
 
+        <div>
+            <p>Agora, escrevo e envio</p>
+            <p>Chegando na mesma hora</p>
+            <p>A pessoa foi embora</p>
+            <p>Abriu outro aplicativo</p>
+            <p>O mundo ficou cativo</p>
+            <p>Da tecnologia do agora.</p>
+            <br><br>
+            <p>Felizmente, pra orar</p>
+            <p>Não precisa de internet</p>
+            <p>Deus escuta todo mundo</p>
+            <p>Se quiser, faça esse teste</p>
+            <p>Dois pontos são dois joelhos</p>
+            <p>Seus lábios são aparelhos</p>
+            <p>Deixe que Deus interprete.</p>
         </div>
     </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
