--- a/HTML5_CSS3/modulo 2/desafios/012/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/012/index.html
@@ -28,15 +28,15 @@
         </div>
 
         <div id="flor">
-            <p>Não é mais como era antes</p>
-            <p>É tudo abreviado</p>
-            <p>"Você" só tem duas letras</p>
-            <p>O "O" e o "E" foi riscado</p>
-            <p>Para declarar o amor</p>
-            <p>Basta botar uma flor</p>
-            <p>E um coração desenhado.</p>
-
-
+            <article>
+                <p>Não é mais como era antes</p>
+                <p>É tudo abreviado</p>
+                <p>"Você" só tem duas letras</p>
+                <p>O "O" e o "E" foi riscado</p>
+                <p>Para declarar o amor</p>
+                <p>Basta botar uma flor</p>
+                <p>E um coração desenhado.</p>
+            </article>
         </div>
 
         <div>
@@ -59,13 +59,15 @@
         </div>
 
         <div id="livro">
-            <p>Tenho saudade das cartas</p>
-            <p>Escritas com a própria mão</p>
-            <p>mandava no mês de Junho</p>
-            <p>Só chegava no  verão</p>
-            <p>Mas matava a saudade</p>
-            <p>Era texto de verdade</p>
-            <p>Nas linhas do coração.</p>
+            <article>
+                <p>Tenho saudade das cartas</p>
+                <p>Escritas com a própria mão</p>
+                <p>mandava no mês de Junho</p>
+                <p>Só chegava no  verão</p>
+                <p>Mas matava a saudade</p>
+                <p>Era texto de verdade</p>
+                <p>Nas linhas do coração.</p>
+            </article>
         </div>
 
         <div>
