--- a/HTML5_CSS3/modulo 2/desafios/012/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/012/index.html
@@ -14,7 +14,7 @@
 
         <header>
             <h1>Cordel Moderno</h1>
-            <p>Por <strong>Milton Duarte</strong></p>
+            <p>Por <strong><a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></strong></p>
         </header>
 
         <div>
@@ -89,7 +89,7 @@
     </main>
 
     <footer>
-
+        <p>Criado por <strong><a href="https://github.com/victorcardosodev" target="_blank" rel="external">Victor Cardoso</a></strong> para o Curso em Vídeo</p>
     </footer>
 </body>
 
