--- a/HTML5_CSS3/modulo 2/desafios/012/index.html
+++ b/HTML5_CSS3/modulo 2/desafios/012/index.html
@@ -28,8 +28,8 @@
             </p>
         </section>
 
-        <section id="flor">
-                <p class="imagem">
+        <section id="flor" class="imagem">
+                <p>
                     Não é mais como era antes <br>
                     É tudo abreviado <br>
                     "Você" só tem duas letras <br>
@@ -62,8 +62,8 @@
             </p>
         </section>
 
-        <section id="livro">
-                <p class="imagem">
+        <section id="livro" class="imagem">
+                <p>
                     Tenho saudade das cartas <br>
                     Escritas com a própria mão <br>
                     mandava no mês de Junho <br>
