--- a/HTML5_CSS3/modulo 3/exercicios/ex025/tabela001.html
+++ b/HTML5_CSS3/modulo 3/exercicios/ex025/tabela001.html
@@ -12,12 +12,19 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
         td {
+            text-align: center;
+            vertical-align: middle;
             border: 1px solid black;
-            padding: 5px;
+            padding: 10px;
+        }
+
+        .numero {
+            text-align: right;
         }
     </style>
 </head>
@@ -41,19 +48,19 @@
         <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">2</td>
         </tr>
 
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">3</td>
         </tr>
 
         <tr>
             <td>A4</td>
             <td>B4</td>
-            <td>C4</td>
+            <td class="numero">4</td>
         </tr>
         
 
