--- a/HTML5_CSS3/modulo 3/exercicios/ex025/tabela002.html
+++ b/HTML5_CSS3/modulo 3/exercicios/ex025/tabela002.html
@@ -20,6 +20,14 @@
             color: red;
         }
 
+        tbody > tr:nth-child(odd) { /* 2n-1 */
+            background-color: white;
+        }
+
+        tbody > tr:nth-child(even) { /* 2n */
+            background-color: lightblue;
+        }
+
         thead, tfoot {
             background-color: gray;
             color: white;
