Tabela da população dos estados brasileiro

--- a/HTML5_CSS3/modulo 3/exercicios/ex025/tabela002.html
+++ b/HTML5_CSS3/modulo 3/exercicios/ex025/tabela002.html
@@ -10,6 +10,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption {
@@ -31,6 +32,12 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
         
         td, th {
@@ -183,5 +190,19 @@
             <td class="num"><strong>0001</strong></td>
         </tfoot>
     </table>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis obcaecati eveniet iusto quidem veniam quas aliquid dolore, accusamus praesentium ratione? Dolor tempore eos soluta iste, cupiditate nesciunt perspiciatis aperiam labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta culpa perferendis mollitia autem eos consectetur dolorum reiciendis. Eligendi non esse consequatur incidunt? Eum amet dicta nostrum possimus placeat excepturi facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi voluptatem quas corporis consequuntur eos totam facilis qui. Eveniet nostrum magnam numquam laudantium sapiente nihil voluptatum veritatis fuga molestias, quam minus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, labore deserunt provident accusamus, sequi iste minus quibusdam cum velit ea beatae cumque inventore laudantium quasi hic officiis, possimus quod vero?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis obcaecati eveniet iusto quidem veniam quas aliquid dolore, accusamus praesentium ratione? Dolor tempore eos soluta iste, cupiditate nesciunt perspiciatis aperiam labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta culpa perferendis mollitia autem eos consectetur dolorum reiciendis. Eligendi non esse consequatur incidunt? Eum amet dicta nostrum possimus placeat excepturi facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi voluptatem quas corporis consequuntur eos totam facilis qui. Eveniet nostrum magnam numquam laudantium sapiente nihil voluptatum veritatis fuga molestias, quam minus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, labore deserunt provident accusamus, sequi iste minus quibusdam cum velit ea beatae cumque inventore laudantium quasi hic officiis, possimus quod vero?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis obcaecati eveniet iusto quidem veniam quas aliquid dolore, accusamus praesentium ratione? Dolor tempore eos soluta iste, cupiditate nesciunt perspiciatis aperiam labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta culpa perferendis mollitia autem eos consectetur dolorum reiciendis. Eligendi non esse consequatur incidunt? Eum amet dicta nostrum possimus placeat excepturi facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi voluptatem quas corporis consequuntur eos totam facilis qui. Eveniet nostrum magnam numquam laudantium sapiente nihil voluptatum veritatis fuga molestias, quam minus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, labore deserunt provident accusamus, sequi iste minus quibusdam cum velit ea beatae cumque inventore laudantium quasi hic officiis, possimus quod vero?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis obcaecati eveniet iusto quidem veniam quas aliquid dolore, accusamus praesentium ratione? Dolor tempore eos soluta iste, cupiditate nesciunt perspiciatis aperiam labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta culpa perferendis mollitia autem eos consectetur dolorum reiciendis. Eligendi non esse consequatur incidunt? Eum amet dicta nostrum possimus placeat excepturi facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi voluptatem quas corporis consequuntur eos totam facilis qui. Eveniet nostrum magnam numquam laudantium sapiente nihil voluptatum veritatis fuga molestias, quam minus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, labore deserunt provident accusamus, sequi iste minus quibusdam cum velit ea beatae cumque inventore laudantium quasi hic officiis, possimus quod vero?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis obcaecati eveniet iusto quidem veniam quas aliquid dolore, accusamus praesentium ratione? Dolor tempore eos soluta iste, cupiditate nesciunt perspiciatis aperiam labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta culpa perferendis mollitia autem eos consectetur dolorum reiciendis. Eligendi non esse consequatur incidunt? Eum amet dicta nostrum possimus placeat excepturi facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi voluptatem quas corporis consequuntur eos totam facilis qui. Eveniet nostrum magnam numquam laudantium sapiente nihil voluptatum veritatis fuga molestias, quam minus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, labore deserunt provident accusamus, sequi iste minus quibusdam cum velit ea beatae cumque inventore laudantium quasi hic officiis, possimus quod vero?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis obcaecati eveniet iusto quidem veniam quas aliquid dolore, accusamus praesentium ratione? Dolor tempore eos soluta iste, cupiditate nesciunt perspiciatis aperiam labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta culpa perferendis mollitia autem eos consectetur dolorum reiciendis. Eligendi non esse consequatur incidunt? Eum amet dicta nostrum possimus placeat excepturi facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi voluptatem quas corporis consequuntur eos totam facilis qui. Eveniet nostrum magnam numquam laudantium sapiente nihil voluptatum veritatis fuga molestias, quam minus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, labore deserunt provident accusamus, sequi iste minus quibusdam cum velit ea beatae cumque inventore laudantium quasi hic officiis, possimus quod vero?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis obcaecati eveniet iusto quidem veniam quas aliquid dolore, accusamus praesentium ratione? Dolor tempore eos soluta iste, cupiditate nesciunt perspiciatis aperiam labore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta culpa perferendis mollitia autem eos consectetur dolorum reiciendis. Eligendi non esse consequatur incidunt? Eum amet dicta nostrum possimus placeat excepturi facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi voluptatem quas corporis consequuntur eos totam facilis qui. Eveniet nostrum magnam numquam laudantium sapiente nihil voluptatum veritatis fuga molestias, quam minus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, labore deserunt provident accusamus, sequi iste minus quibusdam cum velit ea beatae cumque inventore laudantium quasi hic officiis, possimus quod vero?</p>
 </body>
 </html>
