--- a/HTML5_CSS3/modulo 3/exercicios/ex026/tabela.html
+++ b/HTML5_CSS3/modulo 3/exercicios/ex026/tabela.html
@@ -36,7 +36,7 @@
             <tr>
                 <th scope="col">Grupo</th>
                 <th scope="col">Nomes</th>
-                <th colspan="3" scope="col">Filmes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
             <tbody>
@@ -60,7 +60,7 @@
                     <td>Big Hero</td>
                 </tr>
                 <tr>
-                    <th rowspan="3" scope="colgroup">Homens</thr>
+                    <th rowspan="3" scope="rowgroup">Homens</thr>
                     <td>Bruno Mendonça</td>
                     <td>Intocáveis</td>
                     <td>Amnésia</td>
