--- a/HTML5_CSS3/modulo 3/exercicios/ex025/tabela006.html
+++ b/HTML5_CSS3/modulo 3/exercicios/ex025/tabela006.html
@@ -31,7 +31,7 @@
         }
 
         #container {
-            overflow-x: auto;
+            overflow-x: scroll;
         }
     </style>
 </head>
