--- a/HTML5_CSS3/modulo 4/exercicios/ex026/iframe001.html
+++ b/HTML5_CSS3/modulo 4/exercicios/ex026/iframe001.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe {
+            width: 500px;
+            height: 500px;
+            border: 2px dashed black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0">Curso em Video</iframe> para aprender a programar</p>
+    <!-- Tamanho padrão do iframe é 300x150 -->
+    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0"><a href="https://www.cursoemvideo.com" target="_blank" scrolling="auto">Curso em Video</a></iframe> para aprender a programar</p>
+
+    <p>
+        Repositório do Guanabara é bem legal
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0"> <a href="https://gustavoguanabara.github.io" target="_blank"></a></iframe>
+    </p>
+
+    <p>Aqui é meu projeto, um texto de cordel <iframe src="https://victorcardosodev.github.io/Projeto-cordel/" frameborder="0" height="200px" width="400px"><a href="https://victorcardosodev.github.io/Projeto-cordel/" target="_blank"></a></iframe></p>
+
+    <p>o youtube também é um site incrivel <iframe src="https://www.youtube.com.br" frameborder="0"></iframe></p>
 </body>
 </html>
