Testando iframe com conteudo local

--- a/HTML5_CSS3/modulo 4/exercicios/ex027/pag001.html
+++ b/HTML5_CSS3/modulo 4/exercicios/ex027/pag001.html
@@ -14,6 +14,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            margin: auto;
         }
 
         caption {
@@ -37,8 +38,6 @@
     </style>
 </head>
 <body>
-    <h1>Isso é um teste</h1>
-
     <div id="container">
         <table>
             <caption>Tabelas responsivas</caption>
