Navegação no iframe

--- a/HTML5_CSS3/modulo 4/exercicios/ex028/iframe.html
+++ b/HTML5_CSS3/modulo 4/exercicios/ex028/iframe.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, animi, dicta saepe deserunt repellat iure eveniet vero adipisci distinctio delectus eum praesentium ullam facilis culpa nostrum officiis sequi corporis quae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est recusandae, quisquam rerum veniam, dolorum, reiciendis libero placeat dolores cumque quibusdam deleniti temporibus ipsum provident quidem consequuntur commodi optio magnam quia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque blanditiis corrupti fugit voluptas vero similique, quo magni quibusdam natus qui vitae ipsa animi autem fuga modi? In molestias quod pariatur.</p>
     
-    <iframe name="frame" src="../ex026/iframe001.html">
+    <iframe name="frame" src="../ex027/pag001.html">
         <p>Infelizmente seu navegador não é compatível</p>
     </iframe>
 
