--- a/HTML5_CSS3/modulo 4/desafios/013/instagram.html
+++ b/HTML5_CSS3/modulo 4/desafios/013/instagram.html
@@ -4,23 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/social.css">
     <title>Instagram</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        body {
-            width: 100vw;
-            height: 100vh;
-            background: black url(imagens/tela-instagram.jpg) no-repeat top center;
-            background-size: cover;
-        }
-    </style>
 </head>
 <body>
-    
+    <img src="imagens/tela-instagram.jpg" alt="">
+    <a href="#">ACESSE</a>
 </body>
 </html>
