Organizando os botôes de acesso aos sites externos

--- a/HTML5_CSS3/modulo 4/desafios/013/facebook.html
+++ b/HTML5_CSS3/modulo 4/desafios/013/facebook.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-facebook.jpg" alt="">
-    <a href="#">ACESSE</a>
+    <a href="https://www.facebook.com" target="_blank" rel="external" id="face">ACESSE</a>
 </body>
 </html>
