--- a/HTML5_CSS3/modulo 4/desafios/013/github.html
+++ b/HTML5_CSS3/modulo 4/desafios/013/github.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="">
-    <a href="#">ACESSE</a>
+    <a href="https://www.github.com/victorcardosodev" target="_blank" rel="external" id="git">ACESSE</a>
 </body>
 </html>
