--- a/HTML5_CSS3/modulo 4/desafios/013/instagram.html
+++ b/HTML5_CSS3/modulo 4/desafios/013/instagram.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-instagram.jpg" alt="">
-    <a href="#">ACESSE</a>
+    <a href="https://www.instagram.com/" target="_blank" rel="external">ACESSE</a>
 </body>
 </html>
