--- a/HTML5_CSS3/modulo 4/desafios/013/twitter.html
+++ b/HTML5_CSS3/modulo 4/desafios/013/twitter.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-twitter.jpg" alt="">
-    <a href="#">ACESSE</a>
+    <a href="https://twitter.com/" target="_blank" rel="external" id="tt">ACESSE</a>
 </body>
 </html>
