--- a/HTML5_CSS3/modulo 4/exercicios/ex030/form003.html
+++ b/HTML5_CSS3/modulo 4/exercicios/ex030/form003.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Teste de formulário</h1>
-    <form action="" method="get">
+    <form action="" method="get" autocomplete="on">
         <p>
             <label for="nome">Nome: </label>
             <input type="text" name="nome" id="nome" required maxlength="30" placeholder="Nome completo" autocomplete="name">
