Primeira tentativa de form com css

--- a/HTML5_CSS3/modulo 4/exercicios/ex032/index.html
+++ b/HTML5_CSS3/modulo 4/exercicios/ex032/index.html
@@ -14,28 +14,26 @@
             <h1>login</h1>
             
             <p>Seja bem-vindo(a) novaente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-            <p>
-                <form action="cadastro.php">
-                    <label for="email">
+
+            <form action="cadastro.php">
+                <p>
+                    <label for="email" class="cemail">
                         <span class="material-symbols-outlined">person</span>
                     </label>
-                    <input type="email" name="email" id="email" placeholder="Digite seu e-mail">
-                </form>
-            </p>
-            <p>
-                <form action="cadastro.php">
-                    <label for="senha">
+                    <input type="email" name="email" id="email" placeholder="Digite seu e-mail" class="cemail">
+                </p>
+
+                <p>
+                    <label for="senha" class="csenha">
                         <span class="material-symbols-outlined">key</span>
                     </label>
-                    <input type="password" name="senha" id="senha" placeholder="Digite sua senha">
-                </form>
-            </p>
-            <p>
-                <a href="">Entrar</a>
-            </p>
-            <p>
+                    <input type="password" name="senha" id="senha" placeholder="Digite sua senha" class="csenha">
+                </p>
+            </form>
+
+            <button >Entrar</button>
+            
                 <a href="">Esqueci a senha <span class="material-symbols-outlined">mail</span></a>
-            </p>
         </article>
     </main>
 </body>
