Testando algumas propriedades de texto

--- a/HTML5_CSS3/modulo 4/exercicios/ex028/iframe.html
+++ b/HTML5_CSS3/modulo 4/exercicios/ex028/iframe.html
@@ -15,6 +15,18 @@
             height: 450px;
             border: 2px solid black;
         }
+
+        h1 { /*Espaço entre letras*/
+            letter-spacing: 25px;
+        }
+
+        p { /*Espaço entre linhas*/
+            line-height: 50px;
+        }
+
+        a { /*Espaço entre palavras*/
+            word-spacing: 45px;
+        }
     </style>
 </head>
 <body>
