Fazendo o primeiro script do curso

--- a/javascript/aula04/ex001.html
+++ b/javascript/aula04/ex001.html
@@ -7,6 +7,13 @@
     <title>Primeiro exercicio de JavaScript</title>
 </head>
 <body>
-    
+    <h1>Primeiro script do curso</h1>
+
+    <script>
+        alert("Olá, Mundo!");
+        confirm("Qualquer dúvida me mande mensagem !");
+        let nome = prompt("Qual é o seu nome ?");
+        alert("Seja bem vindo " + nome + "!!");
+    </script>
 </body>
 </html>
