--- a/javascript/exercicios/ex02/index.html
+++ b/javascript/exercicios/ex02/index.html
@@ -4,79 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <title>Verificando idade</title>
-    <style>
-        body {
-            background-color: rgba(4, 0, 243, 0.781);
-        }
-
-        h1 {
-            text-align: center;
-            margin: auto;
-            margin-top: 100px;
-        }
-
-        div#principal {
-            position: absolute;
-            background-color: white;
-            padding: 20px;
-            width: 500px;
-            height: 400px;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        p {
-            margin-top: 30px;
-        }
-
-        div#img {
-            background-color: black;
-            width: 150px;
-            height: 150px;
-            margin: auto;
-            border-radius: 50%;
-        }
-
-    </style>
 </head>
+
 <body>
-    <h1>Verificador de idade</h1>
+    <header>
+        <h1>Verificador de idade</h1>
+    </header>
 
-    <div id="principal">
-        <p>
-            <label for="ano">Ano de nascimento: </label>
-            <input type="number" name="ano" id="ano" required>
-        </p>
+    <section id="principal">
+            <form action="cadastro.php" method="get">
+                <p>
+                    <label for="ano">Ano de nascimento: </label>
+                    <input type="number" name="ano" id="ano">
+                </p>
 
-        <p>
-            <label for="sexo">Sexo: </label>
-            <input type="radio" name="sexo" id="fem" value="Fem">Feminino
-            <input type="radio" name="sexo" id="mas" value="mas">Masculino
-        </p>
+                <p>sexo: 
+                    
+                    <input type="radio" name="sexo" id="fem" value="mulher">
+                    <label for="fem">Feminino</label>
 
-        <p>
-            <input type="button" value="Verificar" onclick="verificar()" class="btn">
-        </p>
+                    <input type="radio" name="sexo" id="mas" value="homem" checked>
+                    <label for="mas">Masculino</label>
+                </p>
+                <p>
+                    <input type="button" value="Verificar" onclick="verificar()">
+                </p>
+            </form>
 
-        <p class="txt">lajdlfnsfzdmksklzsdfjkzsfnjknfjksdzflfnskfjnjjfznjdn</p>
-        
-        <div id="img"></div>
-    </div>
+            <p class="txt">Preencha os dados acima para ver os resultados!</p>
 
-    <script>
-        function verificar() {
-            let date = new Date();
-            let anoHoje = date.getFullYear(); 
+    </section>
 
-            let year = parseInt(document.getElementById('ano').value);
-            let idade = anoHoje - year;
+    <footer>
+        <p>Criado por <a href="">Victor Cardoso</a></p>
+    </footer>
 
-            let mas = document.getElementById('mas').value;
-            let fem = document.getElementById('fem').value;
-
-        }
-    </script>
+    <script src="js/index.js" type="text/javascript"></script>
 </body>
 </html>
