Verificando idade com JS

--- a/javascript/exercicios/ex02/index.html
+++ b/javascript/exercicios/ex02/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <footer>
-        <p>Criado por <a href="">Victor Cardoso</a></p>
+        <p>Criado por <a href="https://github.com/victorcardosodev" target="_blank" rel="external">Victor Cardoso</a></p>
     </footer>
 
     <script src="js/index.js" type="text/javascript"></script>
