--- a/javascript/exercicios/ex05/index.html
+++ b/javascript/exercicios/ex05/index.html
@@ -23,7 +23,7 @@
                 </p>
             </div>
 
-            <div>
+            <div id="res">
                 <select name="tabela" id="tabela" size="10">
                     <option>Digite um número acima</option>
                 </select>
